--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           user: zaujulio
           template: classic
           base: ""
+          debug: yes
           
           config_display: large
           config_timezone: America/Sao_Paulo
